--- a/src/br/senai/sp/agenda/view/Index.fxml
+++ b/src/br/senai/sp/agenda/view/Index.fxml
@@ -16,26 +16,26 @@
       <AnchorPane layoutX="1.0" layoutY="4.0" prefHeight="630.0" prefWidth="500.0" styleClass="principal">
          <children>
             <DatePicker fx:id="datatf" layoutX="13.0" layoutY="100.0" prefHeight="48.0" prefWidth="113.0" styleClass="pfdate" />
-            <TextField fx:id="tarefatf" layoutX="162.0" layoutY="153.0" styleClass="tftarefas" />
-            <Label alignment="TOP_CENTER" layoutX="180.0" layoutY="115.0" prefHeight="17.0" prefWidth="113.0" text="Tarefa:" textFill="RED">
+            <TextField fx:id="tarefatf" layoutX="162.0" layoutY="153.0" styleClass="tftarefa" />
+            <Label alignment="TOP_CENTER" layoutX="180.0" layoutY="115.0" prefHeight="17.0" prefWidth="113.0" styleClass="p" text="Tarefa:">
                <font>
                   <Font size="22.0" />
                </font></Label>
-            <Label layoutX="13.0" layoutY="58.0" prefHeight="27.0" prefWidth="167.0" text="Data Para Relização:" textFill="RED">
+            <Label layoutX="13.0" layoutY="58.0" prefHeight="27.0" prefWidth="167.0" styleClass="p" text="Data Para Relização :">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <Label alignment="TOP_CENTER" layoutX="180.0" layoutY="197.0" prefHeight="17.0" prefWidth="113.0" text="Status:" textFill="RED">
+            <Label alignment="TOP_CENTER" layoutX="180.0" layoutY="197.0" prefHeight="17.0" prefWidth="113.0" text="Status:">
                <font>
                   <Font size="22.0" />
                </font></Label>
             <TextField fx:id="statustf" editable="false" layoutX="162.0" layoutY="239.0" styleClass="tfstatus" />
-            <TextArea fx:id="comentariostf" layoutX="150.0" layoutY="333.0" prefHeight="80.0" prefWidth="200.0" styleClass="tfcomentarios" />
-            <Label layoutX="177.0" layoutY="292.0" prefHeight="32.0" prefWidth="149.0" text="Comentários:" textFill="RED">
+            <TextArea fx:id="comentariostf" layoutX="150.0" layoutY="362.0" prefHeight="80.0" prefWidth="200.0" styleClass="tfcomentarios" />
+            <Label layoutX="177.0" layoutY="292.0" prefHeight="32.0" prefWidth="149.0" styleClass="p" text="Comentários:">
                <font>
                   <Font size="22.0" />
                </font></Label>
-            <Button layoutX="21.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnsalvar" prefHeight="80.0" prefWidth="91.0" textFill="#723636">
+            <Button fx:id="btnsalvarclick" layoutX="21.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnsalvar" prefHeight="80.0" prefWidth="91.0" styleClass="btnsalvarpf" textFill="#723636">
                <graphic>
                   <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -43,7 +43,7 @@
                      </image>
                   </ImageView>
                </graphic></Button>
-            <Button layoutX="139.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnexcluir" prefHeight="80.0" prefWidth="91.0">
+            <Button fx:id="btnexcluirclick" layoutX="139.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnexcluir" prefHeight="80.0" prefWidth="91.0" styleClass="btnexcluirpf">
                <graphic>
                   <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -52,7 +52,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button layoutX="262.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnclear" prefHeight="90.0" prefWidth="82.0">
+            <Button fx:id="btnclearclick" layoutX="262.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnclear" prefHeight="90.0" prefWidth="82.0" styleClass="btnclearpf">
                <graphic>
                   <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -61,7 +61,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button layoutX="379.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnadiar" prefHeight="90.0" prefWidth="82.0" styleClass="btnadiarpf">
+            <Button fx:id="clickadiar" layoutX="379.0" layoutY="526.0" mnemonicParsing="false" onAction="#btnadiar" prefHeight="90.0" prefWidth="82.0" styleClass="btnadiarpf">
                <graphic>
                   <ImageView fitHeight="82.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -70,12 +70,12 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Label fx:id="TITULOTF" layoutX="162.0" layoutY="14.0" prefHeight="31.0" prefWidth="200.0" text="COMPANY'S JOÃO" textFill="RED">
+            <Label fx:id="TITULOTF" layoutX="162.0" layoutY="14.0" prefHeight="31.0" prefWidth="200.0" styleClass="p" text="COMPANY'S JOÃO" textFill="#3700ff">
                <font>
                   <Font size="21.0" />
                </font>
             </Label>
-            <Hyperlink fx:id="linktf" layoutX="265.0" layoutY="443.0" prefHeight="23.0" prefWidth="194.0" styleClass="tflink" text="COMPANY'S &amp;&amp; JOÃO.COM.BR" textFill="#00d9ff" />
+            <Hyperlink fx:id="linktf" layoutX="282.0" layoutY="477.0" prefHeight="23.0" prefWidth="194.0" styleClass="tflink" text="COMPANY'S &amp;&amp; JOÃO.COM.BR" textFill="#00d9ff" />
          </children>
       </AnchorPane>
    </children>
