--- a/src/br/senai/sp/agenda/view/application.css
+++ b/src/br/senai/sp/agenda/view/application.css
@@ -12,6 +12,11 @@
 	
 	-fx-background-color: blue;
 }
+
+.painel{
+	
+	-fx-background-color: blue;
+}
 .btnadiarpf{
 	
 	-fx-background-color: blue;
