--- a/src/br/senai/sp/agenda/view/Index.fxml
+++ b/src/br/senai/sp/agenda/view/Index.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senai.sp.agenda.controller.IndexController">
+<AnchorPane fx:id="painel" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.senai.sp.agenda.controller.IndexController">
    <children>
-      <AnchorPane layoutX="1.0" layoutY="4.0" prefHeight="630.0" prefWidth="500.0" styleClass="principal">
+      <AnchorPane fx:id="painel" layoutX="1.0" layoutY="4.0" prefHeight="630.0" prefWidth="500.0" styleClass="principal">
          <children>
             <DatePicker fx:id="datatf" layoutX="13.0" layoutY="100.0" prefHeight="48.0" prefWidth="113.0" styleClass="pfdate" />
             <TextField fx:id="tarefatf" layoutX="162.0" layoutY="153.0" styleClass="tftarefa" />
